[package]
name = "mongo-rust-example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
thiserror = "1.0.48"
tokio = {version = "1.32.0", features = ["rt","macros"] }
serde = {version = "1.0.188", features = ["derive"] }
mongodb = "2.6.1"
warp = "0.3.5"
futures = { version = "0.3.4", default-features = false, features = ["async-await"] }
